# test

./: Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
app/: layout.tsx  page.tsx
components/: chatbox.module.scss  chatbox.tsx  markdown.scss  markdown.tsx  prompt.tsx  session.module.scss  session.tsx  window.scss
components/ui/: button.tsx  ui-lib.module.scss  ui-lib.tsx
testttt/: pyproject.toml
testttt/app/: main.py
testttt/app/routers/: sample.py
